<resources>
    <string name="app_name">Audio@JT</string>
    <string name="record_title">录音测试</string>
    <string name="play_title">播放测试</string>
    <string name="device_title">设备测试</string>
    <string name="rec_source">采集源:</string>
    <string name="audio_rate">采样率:</string>
    <string name="audio_channel">通道数:</string>
    <string name="play_stream_type">流类型:</string>
    <string name="play_usage_type">usage:</string>
    <string name="play_content_type">content:</string>
    <string name="rec_capture">内外</string>
    <string name="rec_start">录音</string>
    <string name="rec_pre_dev">偏好设备</string>
    <string name="play_sample">样音/录音</string>
    <string name="play_usage">usage/stream</string>
    <string name="play_cycle">循环/顺序</string>
    <string name="play_start">播放</string>
    <string name="play_pre_dev">偏好设备</string>
    <string name="audio_mode">音频模式:</string>
    <string name="dev_list">可用设备:</string>
    <string name="set_mode">切模</string>
    <string name="set_speaker_on"> spk </string>
    <string name="set_sco_on"> sco </string>
    <string name="btn_update_dev">设备刷新</string>
    <string name="img_rec_wave">录音波形</string>
</resources>
