<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="james.tsui.audio.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_device_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/record_title"
                    android:textSize="8pt"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/rec_source" />

                    <Spinner
                        android:id="@+id/spn_rec_source"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/audio_rate" />

                    <Spinner
                        android:id="@+id/spn_rec_rate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/audio_channel" />

                    <Spinner
                        android:id="@+id/spn_rec_channel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_rec_capture"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/rec_capture" />

                    <Button
                        android:id="@+id/btn_rec_start"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/rec_start" />

                    <Button
                        android:id="@+id/btn_rec_dev"
                        android:layout_width="210dp"
                        android:layout_height="wrap_content"
                        android:text="@string/rec_pre_dev" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/play_title"
                    android:textSize="8pt"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/play_stream_type" />

                    <Spinner
                        android:id="@+id/spn_play_stream"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/audio_rate" />

                    <Spinner
                        android:id="@+id/spn_play_rate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/audio_channel" />

                    <Spinner
                        android:id="@+id/spn_play_channel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/play_usage_type" />

                    <Spinner
                        android:id="@+id/spn_play_usage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/play_content_type" />

                    <Spinner
                        android:id="@+id/spn_play_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_play_sample"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/play_sample" />

                    <Button
                        android:id="@+id/btn_play_usage"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:text="@string/play_usage" />

                    <Button
                        android:id="@+id/btn_play_cycle"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/play_cycle" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_play_start"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/play_start" />

                    <Button
                        android:id="@+id/btn_play_dev"
                        android:layout_width="210dp"
                        android:layout_height="wrap_content"
                        android:text="@string/play_pre_dev" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/speaker_title"
                    android:textSize="8pt"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/audio_mode" />

                    <Spinner
                        android:id="@+id/spn_audio_mode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/dev_list" />

                    <Spinner
                        android:id="@+id/spn_dev_available"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_set_mode"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/set_mode" />

                    <Button
                        android:id="@+id/btn_speaker"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/set_speaker_on" />

                    <Button
                        android:id="@+id/btn_sco"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/set_sco_on" />

                    <Button
                        android:id="@+id/btn_update_dev"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_update_dev" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_audio_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="Hello World!" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
